# JuceQtLearning

./: .gitignore  CMakeLists.txt  README.md
src/: JuceQComponent.cpp  JuceQComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QMLApplication.cpp  QMLApplication.h  main.cpp
src/Controllers/: GainController.cpp  GainController.h
src/Models/: GainModel.cpp  GainModel.h
src/QML/: Definitions.qml  Knob.qml  SharedFunctions.js  main.qml
src/QML/AudioComponents/: CMakeLists.txt  Knob.qml
src/QML/Utilities/: CMakeLists.txt  Definitions.qml
